# celery-example

./: README.md  pyproject.toml
src/alpha/: app.py
src/bravo/: app.py  tasks.py
